--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3'
+          ruby-version: '3.4'
           bundler-cache: true
 
       - name: Run RuboCop
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby-version: ['3.0', '3.1', '3.2', '3.3']
+        ruby-version: ['3.2', '3.3', '3.4']
 
     steps:
       - uses: actions/checkout@v4
@@ -41,8 +41,8 @@ jobs:
         run: bundle exec rake test
 
       - name: Upload coverage to Codecov
-        if: matrix.ruby-version == '3.3'
-        uses: codecov/codecov-action@v4
+        if: matrix.ruby-version == '3.4'
+        uses: codecov/codecov-action@v5
         with:
           files: coverage/.resultset.json
           fail_ci_if_error: false
@@ -57,7 +57,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3'
+          ruby-version: '3.4'
           bundler-cache: true
 
       - name: Run bundler-audit
@@ -79,7 +79,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3'
+          ruby-version: '3.4'
           bundler-cache: true
 
       - name: Build gem
